# pattern-recognition

./: README.md  bag_visual_words_approach.ipynb  pyproject.toml  vgg16_connected_to_classifiers.ipynb
.devcontainer/: Dockerfile  devcontainer.json
estimate_metrics/: __init__.py
extract_features/: __init__.py
patter_recognition/: bag_os_visual_words_technique.ipynb  vgg16_connected_to_classifiers.ipynb
patter_recognition/estimate_metrics/: __init__.py  estimative_metrics.py
patter_recognition/extract_features/: extract_features.py
patter_recognition/preprocess_datast/: __init__.py  preprocess_dataset.py
